--- a/www/templates/listaPokemons.html
+++ b/www/templates/listaPokemons.html
@@ -3,7 +3,7 @@
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="pokemon in listaPokemons">
-        {{pokemon}}
+        {{pokemon.name}}
       </ion-item>
     </ion-list>
   </ion-content>
