--- a/www/templates/listaPokemons.html
+++ b/www/templates/listaPokemons.html
@@ -3,7 +3,7 @@
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="pokemon in listaPokemons">
-        <a href="#/pokemon/{{pokemon.name}}">{{pokemon.name}}</a>
+        <a href="#/pokemon/{{pokemon.id}}">{{pokemon.id}} - {{pokemon.name}}</a>
       </ion-item>
     </ion-list>
   </ion-content>
