rota ok stateparams !ok :(

--- a/www/templates/pokemon.html
+++ b/www/templates/pokemon.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-nav-title>{{poke.name}}</ion-nav-title>
+    <ion-nav-title>{{numPokemon}}</ion-nav-title>
     <ion-content>
         <h4>Number {{poke.num}} </h4>
         Types: {{poke.type1}} {{poke.type2}}
