--- a/www/templates/listaPokemons.html
+++ b/www/templates/listaPokemons.html
@@ -21,7 +21,7 @@
           <ion-item class="item-accordion"
                       ng-repeat="filho in pai.subs"
                       ng-show="isGroupShown(pai)">
-            <a href="#/tabela/{{filho.id}}">{{filho.name}}</a>
+            <a href="#/pokemon/{{filho.id}}">{{filho.id}} - {{filho.name}}</a>
           </ion-item>
         </div>          
       </ion-list>
