Consertando o link dos Pokemons

--- a/www/templates/listaPokemons.html
+++ b/www/templates/listaPokemons.html
@@ -21,9 +21,9 @@
           <ion-item class="item-accordion"
                       ng-repeat="filho in pai.subs"
                       ng-show="isGroupShown(pai)">
-            <a href="#/pokemon/{{filho.id}}">{{filho.id}} - {{filho.name}}/a>
+            <a href="#/pokemon/{{filho.id}}">{{filho.id}} - {{filho.name}}</a>
           </ion-item>
-        </div>          
+        </div>
       </ion-list>
     </ion-list>
   </ion-content>
