--- a/www/templates/pokemon.html
+++ b/www/templates/pokemon.html
@@ -1,20 +1,21 @@
 <ion-view>
     <ion-nav-title>{{poke.forms[0].name | capitalizeFirstLetter}}</ion-nav-title>
     <ion-content>
-        <h4>Number: {{numPokemon}} </h4>
-        <h4>Types: </h4>
-          <div ng-repeat="types in poke.types">
-            <img src="img/types/{{types.type.name}}.png" style="height: 30px; width: 100px">
+      <img src="https://img.pokemondb.net/sprites/x-y/normal/{{poke.name}}.png">
+      <h4>Number: {{numPokemon}} </h4>
+      <h4>Types: </h4>
+        <div ng-repeat="types in poke.types">
+          <img src="img/types/{{types.type.name}}.png" style="height: 30px; width: 100px">
+        </div>
+      <h4>Abilities:</h4>
+        <p ng-repeat="hab in poke.abilities">
+          {{hab.ability.name}}
+          <i class="icon" ng-show="hab.is_hidden" ng-class="ion-star"></i>
+        </p>
+      <h4>Stats:</h4>
+          <div ng-repeat="status in poke.stats">
+              <p>{{status.stat.name}} - {{status.base_stat}}</p>
           </div>
-        <h4>Abilities:</h4>
-          <p ng-repeat="hab in poke.abilities">
-            {{hab.ability.name}}
-            <i class="icon" ng-show="hab.is_hidden" ng-class="ion-star"></i>
-          </p>
-        <h4>Stats:</h4>
-            <div ng-repeat="status in poke.stats">
-                <p>{{status.stat.name}} - {{status.base_stat}}</p>
-            </div>
-        </table>
+      </table>
     </ion-content>
 </ion-view>
