--- a/www/templates/pokemon.html
+++ b/www/templates/pokemon.html
@@ -2,6 +2,7 @@
     <ion-nav-title>{{poke.forms[0].name | capitalizeFirstLetter}}</ion-nav-title>
     <ion-content>
       <img src="https://img.pokemondb.net/sprites/x-y/normal/{{poke.name}}.png">
+      <img src="https://img.pokemondb.net/sprites/x-y/shiny/{{poke.name}}.png">
       <h4>Number: {{numPokemon}} </h4>
       <h4>Types: </h4>
         <div ng-repeat="types in poke.types">
