--- a/www/templates/listaPokemons.html
+++ b/www/templates/listaPokemons.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-nav-title>Pokédex Mega</ion-nav-title>
+  <ion-nav-title>Pokédex</ion-nav-title>
   <ion-content>
 
       <div class="list list-inset">
